@@ -15,6 +15,9 @@ documents those changes that are of interest to users and admins.
     interrupts.
  -- Allow --ignore-pbs to take effect when read as an #SBATCH argument.
  -- Added srun --export option to set/export specific environment variables.
+ -- If users specify ALL together with other variables using the
+    --export sbatch/srun command line option, propagate the users'
+    environ to the execution side.
 
 * Changes in Slurm 14.03.11
 ===========================
